Refactor book saving logic and streamline database interactions in BookService